added locales en/es

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -9,7 +9,9 @@
 
 	"label_login": "Log In",
 	"label_logout": "Log Out",
+	"label_add_budget_expense": "Budget or Loan",
 	"label_budget": "Budget",
+	"label_loan": "Loan",
 	"label_expense": "Expense",
 	"label_expenses": "Expenses",
 	"label_view_expenses": "Expenses",
@@ -20,6 +22,8 @@
 	"label_amount": "Amount",
 	"label_name": "Name",
 	"label_maximun_amount": "Maximun spending / Loan amount",
+	"label_maximun_spending": "Maximun spending",
+	"label_loan_amount": "Loan amount",
 	"label_uncategorized": "Uncategorized",
 	"label_budget_type": "Budget type",
 	"label_type_default": "Default (expenses tracker)",
@@ -29,26 +33,35 @@
 	"label_update": "Update",
 	"label_cancel": "Cancel",
 	"label_delete": "Delete",
-	"label_note": "Note:",
+	"label_total_budgets": "Budgets Total",
+	"label_total_loans": "Loans Total",
 
+	"add_budget_loan": "Add Budget or Loan",
 	"update_budget": "Update Budget",
 	"update_loan": "Update Loan",
 	"update_expense": "Update Expense",
 	"update_installment": "Update Installment",
 	"confirm_delete": "Confirm Delete",
 
-	"budget_is_amount_away_from_maxing_out": "Budget is <strong>{{amount}}</strong> away from maxing out.",
+	"total_budgets_is_amount_away_from_maxed_out": "Total budget is <strong>{{amount}}</strong> away from maxing out.",
+	"total_budgets_maxed_out": "Total budget maxed out!",
+	"total_budgets_gone_over_by_amount": "Opps! Total budget gone over by <strong>{{amount}}</strong>",
+
+	"budget_is_amount_away_from_maxed_out": "Budget is <strong>{{amount}}</strong> away from maxing out.",
 	"budget_maxed_out": "Budget maxed out!",
-	"opps_budget_gone_over_by_amount": "Opps! Gone over budget by <strong>{{amount}}</strong>",
+	"budget_gone_over_by_amount": "Opps! Budget gone over budget by <strong>{{amount}}</strong>",
 
-	"loan_is": "Loan is",
-	"away_from_being_repayed": "away from being repayed.",
+	"total_loans_is_amount_away_from_maxed_out": "Loans total is <strong>{{amount}}</strong> away from being re-paid.",
+	"total_loans_paid_in_full": "Congratulation! All loans were paid in full.",
+	"total_loans_overpaid_by_amount": "Opps! Total budget gone over by <strong>{{amount}}</strong>",
+
+	"loan_is_amount_away_from_maxing_out": "Loan balance is <strong>{{amount}}</strong> away from being paid.",
 	"loan_paid_in_full": "Congratulation! Loan is paid in full.",
-	"loan_by": "Loan overpaid by",
+	"loan_overpaid_by_amount": "Loan overpaid by <strong>{{amount}}</strong>",
 
-	"confirm_delete_message": "Are you sure you want to delete [{{budget_type}}] [{{expense_name}}]?",
-	"confirm_delete_budget_note": "This budget's expenses, will be moved to the [Budget] [Uncategorized].",
-	"confirm_delete_loan_note": "This budget's installments will also be deleted.",
+	"confirm_delete_message": "Are you sure you want to delete [{{type}}] [{{name}}]?",
+	"confirm_delete_budget_note": "<strong>Note:</strong> This budget's expenses, will be moved to the [Budget] [Uncategorized].",
+	"confirm_delete_loan_note": "<strong>Note:</strong> This budget's installments will also be deleted.",
 
 	"hero_welcome_header": "Ready to manage budgets?",
 	"hero_welcome_message": "Visit your dashboard!",
