--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -9,7 +9,9 @@
 
 	"label_login": "Entrar",
 	"label_logout": "Salir",
-	"label_budget": "Cuenta",
+	"label_add_budget_expense": "Presupuesto o Cuenta",
+	"label_budget": "Presupuesto",
+	"label_loan": "Cuenta",
 	"label_expense": "Gasto",
 	"label_expenses": "Gastos",
 	"label_view_expenses": "Gastos",
@@ -19,36 +21,47 @@
 	"label_description": "Descripción",
 	"label_amount": "Monto",
 	"label_name": "Nombre",
-	"label_maximun_amount": "Presupuesto / Monto total de cuenta",
+	"label_maximun_amount": "Presupuesto máximo / Monto total de cuenta",
+	"label_maximun_spending": "Presupuesto máximo",
+	"label_loan_amount": "Monto total de cuenta",
 	"label_uncategorized": "Sin categoría",
 	"label_budget_type": "Tipo de cuenta",
-	"label_type_default": "Predeterminado (rastreador de gastos)",
-	"label_type_loan": "Cuentas (rastreador de cuotas)",
+	"label_type_default": "Presupuesto (seguimiento de gastos)",
+	"label_type_loan": "Cuenta (seguimiento de cuotas)",
 	"label_card_bg_color": "Color de fondo de la tarjeta",
 	"label_add": "Agregar",
 	"label_update": "Actualizar",
 	"label_cancel": "Cancelar",
 	"label_delete": "Eliminar",
-	"label_note": "Nota:",
+	"label_total_budgets": "Total presupuestos",
+	"label_total_loans": "Total cuentas",
 
+	"add_budget": "Agregar Presupuesto o Cuenta",
 	"update_budget": "Actualizar presupuesto",
 	"update_loan": "Actualizar cuenta",
 	"update_expense": "Actualizar gasto",
 	"update_installment": "Actualizar cuota",
 	"confirm_delete": "Confirmar eliminación",
 
-	"budget_is_amount_away_from_maxing_out": "El presupuesto esta a <strong>{{amount}}</strong> para ser agotado.",
+	"total_budgets_is_amount_away_from_maxed_out": "Presupuesto total está a <strong>{{amount}}</strong> de ser agotado.",
+	"total_budgets_maxed_out": "Presupuesto total agotado!",
+	"total_budgets_gone_over_by_amount": "¡Ui! Presupuesto total superado por <strong>{{amount}}</strong>",
+
+	"budget_is_amount_away_from_maxed_out": "El presupuesto está a <strong>{{amount}}</strong> de ser agotado.",
 	"budget_maxed_out": "¡Presupuesto agotado!",
-	"opps_budget_gone_over_by_amount": "¡Ui! Superaste el presupuesto por <strong>{{amount}}</strong>",
+	"budget_gone_over_by_amount": "¡Ui! Superaste el presupuesto por <strong>{{amount}}</strong>",
 
-	"loan_is": "La cuenta está a",
-	"away_from_being_repayed": "de ser pagada.",
-	"loan_paid_in_full": "¡Felicitaciones! El cuenta está pagada en su totalidad.",
-	"loan_by": "Cuenta pagada por un exceso de",
+	"total_loans_is_amount_away_from_maxed_out": "El saldo total a pagar de las cuentas es de <strong>{{amount}}</strong>",
+	"total_loans_paid_in_full": "¡Felicidades! Todas las cuentas están pagadas en su totalidad.",
+	"total_loans_overpaid_by_amount": "El total de las cuentas fue pagado en exceso de <strong>{{amount}}</strong>",
 
-	"confirm_delete_message": "¿Estás seguro de que deseas eliminar [{{budget_type}}] [{{expense_name}}]?",
-	"confirm_delete_budget_note": "Los gastos de este presupuesto se trasladarán al [Presupuesto] [Sin categoría].",
-	"confirm_delete_loan_note": "Las cuotas de esta cuenta también serán eliminadas.",
+	"loan_is_amount_away_from_maxing_out": "El saldo de la cuenta es de <strong>{{amount}}</strong>",
+	"loan_paid_in_full": "¡Felicidades! La cuenta está pagada en su totalidad.",
+	"loan_overpaid_by_amount": "Cuenta pagada en exceso de <strong>{{amount}}</strong>",
+
+	"confirm_delete_message": "¿Estás seguro de que deseas eliminar [{{type}}] [{{name}}]?",
+	"confirm_delete_budget_note": "<strong>Advertencia:</strong> Los gastos de este presupuesto se trasladarán al [Presupuesto] [Sin categoría].",
+	"confirm_delete_loan_note": "<strong>Advertencia:</strong> Las cuotas de esta cuenta también serán eliminadas.",
 
 	"hero_welcome_header": "¿Listo para administrar presupuestos?",
 	"hero_welcome_message_guest": "Inicia sesión para comenzar.",
