--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -9,7 +9,7 @@
 
 	"label_login": "Log In",
 	"label_logout": "Log Out",
-	"label_add_budget_expense": "Budget or Loan",
+	"label_add_budget_expense": "Add Budget or Loan",
 	"label_budget": "Budget",
 	"label_loan": "Loan",
 	"label_expense": "Expense",
