--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -9,7 +9,7 @@
 
 	"label_login": "Entrar",
 	"label_logout": "Salir",
-	"label_add_budget_expense": "Presupuesto o Cuenta",
+	"label_add_budget_expense": "Agregar Presupuesto o Cuenta",
 	"label_budget": "Presupuesto",
 	"label_loan": "Cuenta",
 	"label_expense": "Gasto",
